# solar_forecasting

./: .flake8  .pre-commit-config.yaml  README.md  pyproject.toml  solar_forecasting.ipynb
.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json  postCreateCommand.sh  postcommand.sh
notebooks/: solar_forecasting.ipynb
src/: data_loader.py
src/data_quality/: completess.py  consistency.py
src/forecasting/: evaluation.py
src/models/: base_model.py  lstm_model.py  randomforestregressor_model.py  xgboost_model.py
src/utils/: plotting.py
